--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>IDE</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-<style src="style.css"></style>
+<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
  
@@ -20,9 +20,12 @@ int main(){
     return 0;
 }</textarea>
         </div>
+        <div class="input"><b>Input:</b><br>
+            <textarea id="input" rows="4" cols="70"></textarea>
+        </div>
         <div class="submit-button"><input type="button" id="submit" value="submit"></div>
         <div class="output"><b>Output:</b><br>
-            <textarea id="output" rows="4" cols="10"></textarea>
+            <textarea id="output" rows="4" cols="70"></textarea>
         </div>
     </div>
     
