--- a/views/style.css
+++ b/views/style.css
@@ -1,3 +1,72 @@
+html {
+    background-color: #3a3a3a;
+    color: aliceblue;
+}
+
+input#submit {
+    background-color: deepskyblue;
+    border-radius: 4px;
+    width: 80px;
+    height: 30px;
+    border-bottom-color: white;
+    border-width: 2px;
+    color: black;
+    font-size: unset;
+}
+
+.submit-button {
+    width: fit-content;
+    margin-right: 0px;
+    display: inline-block;
+}
+
+input#submit:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+.loader {
+    border: 3px solid #f3f3f3;
+    border-top: 3px solid #3498db;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    animation: spin 2s linear infinite;
+    display: none;
+}
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+textarea#code {
+    width: 70%;
+    padding-bottom: 30%;
+}
+
+textarea{
+    background-color: #4c4b4b;
+    border-width: thin;
+    border-color: #1a7ea0;
+    border-radius: 10px;
+    color: aliceblue;
+    font-size: small;
+}
+
+textarea::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(39, 196, 235, 0.3); 
+    border-radius: 10px;
+}
+ 
+textarea::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
 #ide {
     background-color: #1c1e1f;
     color: #c5c1b9;
