--- a/views/style.css
+++ b/views/style.css
@@ -24,6 +24,12 @@ input#submit:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
 
+  .scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
+
 .loader {
     border: 3px solid #f3f3f3;
     border-top: 3px solid #3498db;
