Language menu values

--- a/views/index.html
+++ b/views/index.html
@@ -37,22 +37,27 @@ int main(){
     </div>
     <div class="side-panel">
             <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Scrollable Menu <span class="caret"></span></button>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">C++ <span class="caret"></span></button>
                 <ul class="dropdown-menu scrollable-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">C++</a></li>
+                    <li><a href="#">C</a></li>
+                    <li><a href="#">Java</a></li>
+                    <li><a href="#">PHP</a></li>
+                    <li><a href="#">Perl</a></li>
+                    <li><a href="#">Python2</a></li>
+                    <li><a href="#">Python3</a></li>
+                    <li><a href="#">Ruby</a></li>
+                    <li><a href="#">Go Lang</a></li>
+                    <li><a href="#">Bash Shell</a></li>
+                    <li><a href="#">SQL</a></li>
+                    <li><a href="#">BrainFuck</a></li>
+                    <li><a href="#">C#</a></li>
+                    <li><a href="#">Swift</a></li>
+                    <li><a href="#">Rust</a></li>
+                    <li><a href="#">NodeJS</a></li>
+                    <li><a href="#">Kotlin</a></li>
+                    <li><a href="#">Whitespace</a></li>
+                    <li><a href="#">R Language</a></li>
                 </ul>
             </div>
 
