--- a/views/style.css
+++ b/views/style.css
@@ -46,7 +46,7 @@ input#submit:hover {
   }
 
 textarea#code {
-    width: 70%;
+    width: -webkit-fill-available   ;
     padding-bottom: 30%;
 }
 
@@ -73,12 +73,17 @@ textarea::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
-#ide {
-    background-color: #1c1e1f;
+.ide {
     color: #c5c1b9;
-    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    width: 70%;
+    padding: 20px;
+    float: left;
+}
+
+.side-panel {
+    float: left;
 }
