Supports multiple languages now!!!!

--- a/views/index.html
+++ b/views/index.html
@@ -36,29 +36,27 @@ int main(){
         </div>
     </div>
     <div class="side-panel">
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">C++ <span class="caret"></span></button>
-                <ul class="dropdown-menu scrollable-menu" role="menu">
-                    <li><a href="#">C++</a></li>
-                    <li><a href="#">C</a></li>
-                    <li><a href="#">Java</a></li>
-                    <li><a href="#">PHP</a></li>
-                    <li><a href="#">Perl</a></li>
-                    <li><a href="#">Python2</a></li>
-                    <li><a href="#">Python3</a></li>
-                    <li><a href="#">Ruby</a></li>
-                    <li><a href="#">Go Lang</a></li>
-                    <li><a href="#">Bash Shell</a></li>
-                    <li><a href="#">SQL</a></li>
-                    <li><a href="#">BrainFuck</a></li>
-                    <li><a href="#">C#</a></li>
-                    <li><a href="#">Swift</a></li>
-                    <li><a href="#">Rust</a></li>
-                    <li><a href="#">NodeJS</a></li>
-                    <li><a href="#">Kotlin</a></li>
-                    <li><a href="#">Whitespace</a></li>
-                    <li><a href="#">R Language</a></li>
-                </ul>
+            <div class="langs">
+                <select id="lang-list">
+                    <option value="cpp142">C++</option>
+                    <option value="c3">C</option>
+                    <option value="java2">Java</option>
+                    <option value="php2">PHP</option>
+                    <option value="python21">Python2</option>
+                    <option value="python32">Python3</option>
+                    <option value="ruby2">Ruby</option>
+                    <option value="go2">Go Lang</option>
+                    <option value="bash2">Bash Shell</option>
+                    <option value="sql2">SQL</option>
+                    <option value="brainfuck0">BrainFuck</option>
+                    <option value="csharp2">C#</option>
+                    <option value="swift2">Swift</option>
+                    <option value="rust2">Rust</option>
+                    <option value="nodejs2">NodeJS</option>
+                    <option value="kotlin1">Kotlin</option>
+                    <option value="whitespace0">Whitespace</option>
+                    <option value="r2">R Language</option>
+                <select>
             </div>
 
     </div>
